--- a/Pipfile
+++ b/Pipfile
@@ -10,6 +10,7 @@ mysqlclient = "*"
 djangorestframework = "*"
 djoser = "*"
 djangorestframework-simplejwt = "*"
+drf-nested-routers = "*"
 
 [dev-packages]
 
